# ComplianceDriftDetector

./: .gitignore  CLAIM_BOUNDARIES.md  COMPLIANCE_DRIFT_QUICK_SCAN.md  DEMO_PROOF_NOTES.md  LICENSE_TIERS.md  LINKEDIN_LAUNCH_POST.md  NOTICE.md  OUTREACH_MESSAGE.md  PAIN_STATEMENT.md  PILOT_INTAKE_CHECKLIST.md  PRIVACY_POLICY.md  README.md  REFUND_AND_CANCELLATION_POLICY.md  SELF_SERVICE_QUICKSTART.md  START_HERE.bat  TERMS_OF_SERVICE.md  pyproject.toml
examples/template_packs/ai_output_logging/: behavior_evidence.csv  policy_claims.csv
examples/template_packs/deployment_approval/: behavior_evidence.csv  policy_claims.csv
examples/template_packs/privileged_access/: behavior_evidence.csv  policy_claims.csv
input_templates/: README_INPUT_FORMAT.md  behavior_evidence_template.csv  policy_claims_template.csv
software/: compliance_drift_detector.py  render_html_report.py  report_renderer.py  run_demo.py  run_scan.py  verify.py
software/output/: drift_evidence.json  drift_report.json  drift_report.md  input_data.json
tests/: test_drift_detector.py  test_self_service.py
